--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,24 @@
         android:theme="@style/Theme.WordsApp"
         tools:targetApi="31">
         <activity
+            android:name=".SecondDemoActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="true">
+            
+        </activity>
+
+        <receiver
+            android:name=".BatteryLevelReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_LOW" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name=".FirstDemoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +38,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".BatteryLevelReceiver"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.BATTERY_LOW"/>
-            </intent-filter>
-        </receiver>
     </application>
 
 </manifest>
